netpols/netpol-blue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blue-ingress
spec:
  podSelector:
    matchLabels:
      app: blue
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: sample-app
